# bluesfl_Ibex

./: .gitignore  .gitmodules  Cargo.toml  README.md  blocks.json  run_bluesfl_nutshell.sh  signal_name_map.json
ablation_rm_exe_path/: block_checker_2.md  block_checker_system.md
ablation_rm_sig_values/: block_checker_2.md  block_checker_system.md
docs/: 1.setup_dataset.md  2.baselines.md  3.run_biosfl.md  ibex-testing-guide.md  nutshell-adaptation.md  nutshell-bluesfl-workflow-v2.md  nutshell-bluesfl-workflow.md  nutshell-e2e-test-guide.md  nutshell-full-testing-guide.md  nutshell-percycle-e2e-guide.md  nutshell-toolcall-e2e-test.md
exps/: metric_all.sh  run_biosfl.sh  run_biosfl_ablation_rm_exe_path.sh  run_biosfl_ablation_rm_sig_values.sh  run_biosfl_claude-sonnet-4-5-20250929.sh  run_biosfl_naive_fl.sh  run_biosfl_run_left_claude_94.sh  run_biosfl_wo_mod_checker.sh  run_ibex.sh  run_nutshell.sh  run_sbfl.sh
prompts/: block_checker_system.md  block_checker_toolcall.md  block_checker_toolcall_system.md  block_reranker.md  block_reranker_system.md  mod_checker.md  mod_checker_system.md  signal_analyzer.md
scripts/: apply_diffs.py  cal_hit_or_not.py  cal_metric.py  checker.py  collect_loc_results.py  draw_graph.py  fl_run_all.py  fl_run_all_naive_fl.py  gen_signal_map.py  gen_test_info.py  ibex_boot.sh  ibex_fl_run_all.py  loc_res_review.py  nutshell_fl_run_all.py  nutshell_test_analysis.py  plot_blocks.py  plot_trace_size_dis.py  plot_venn.py  rtllm_boot.sh  sbfl_run_all.py  stat.py
src/: bootstrap.rs  lib.rs  localizer.rs  log.rs  macros.rs  utils.rs
(+113 files in other folders)
