[package]
name = "sv-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.28.0"
sv-parser = { path = "sv-parser/sv-parser" }
async-trait = "0.1.88"
serde_json = "1.0.140"
regex = "1.11.1"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
flexi_logger = "0.30.0"
anyhow = "1.0.97"
wellen = "0.14.5"
tabled = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
egg = "0.10.0"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
fs_extra = "1.3"
pathdiff = "0.2.3"
dashmap = "7.0.0-rc2"
rig-core = "0.19.0"
schemars = "0.8.16"
thiserror = "2.0.12"
tracing-subscriber = "0.3.20"
derive_builder = "0.20.0"